doc/#61 Updated new_coverage_report

--- a/new_coverage_report/org.terasology.AdHoc/AdHocAABB.java.html
+++ b/new_coverage_report/org.terasology.AdHoc/AdHocAABB.java.html
@@ -26,7 +26,7 @@
      */
     public static void addVisitedBranchNormalForPlane(int visitedId) {
 <span class="pc bpc" id="L28" title="2 of 4 branches missed.">        if (visitedId &lt; adHocNormalForPlane.length &amp;&amp; visitedId &gt;= 0) {</span>
-<span class="pc bpc" id="L29" title="1 of 2 branches missed.">            if(adHocNormalForPlane[visitedId] == 0) {</span>
+<span class="fc bfc" id="L29" title="All 2 branches covered.">            if(adHocNormalForPlane[visitedId] == 0) {</span>
 <span class="fc" id="L30">                adHocNormalForPlane[visitedId] = 1;</span>
 <span class="fc" id="L31">                foundNormal++;</span>
             }
@@ -66,7 +66,7 @@
 <span class="fc" id="L66">        StringBuilder builder = new StringBuilder();</span>
 <span class="fc" id="L67">        builder.append(&quot;Visited pahts in &quot;+name+&quot;:\n&quot;);</span>
 <span class="fc bfc" id="L68" title="All 2 branches covered.">        for (int i = 0; i &lt; adHoc.length; i++) {</span>
-<span class="fc bfc" id="L69" title="All 2 branches covered.">            if (adHoc[i] == 1) {</span>
+<span class="pc bpc" id="L69" title="1 of 2 branches missed.">            if (adHoc[i] == 1) {</span>
 <span class="fc" id="L70">                builder.append(&quot;Visited branch &quot;);</span>
 <span class="fc" id="L71">                builder.append(i);</span>
 <span class="fc" id="L72">                builder.append(&quot;\n&quot;);</span>
