--- a/new_coverage_report/org.terasology.config.flexible.internal/SettingImplTest.java.html
+++ b/new_coverage_report/org.terasology.config.flexible.internal/SettingImplTest.java.html
@@ -142,9 +142,9 @@ import static org.junit.jupiter.api.Assertions.assertTrue;
 <span class="fc" id="L142">                setting.subscribe(listener);</span>
             }
 
-<span class="pc bpc" id="L145" title="1 of 2 branches missed.">            for (int i = 0; i &lt; new FastRandom().nextInt(subscriberCount / 2); i++) {</span>
-<span class="nc" id="L146">                setting.unsubscribe(listeners.get(i));</span>
-<span class="nc" id="L147">                subscriberCount--;</span>
+<span class="fc bfc" id="L145" title="All 2 branches covered.">            for (int i = 0; i &lt; new FastRandom().nextInt(subscriberCount / 2); i++) {</span>
+<span class="fc" id="L146">                setting.unsubscribe(listeners.get(i));</span>
+<span class="fc" id="L147">                subscriberCount--;</span>
             }
 
 <span class="fc" id="L150">            setting.set(30);</span>
