--- a/new_coverage_report/org.terasology.math/AABB.java.html
+++ b/new_coverage_report/org.terasology.math/AABB.java.html
@@ -322,13 +322,13 @@ public final class AABB {
     public Vector3f normalForPlaneClosestToOrigin(Vector3f pointOnAABB, Vector3f origin, boolean testX, boolean testY, boolean testZ) {
 <span class="fc" id="L323">        List&lt;Vector3f&gt; normals = new ArrayList&lt;&gt;();</span>
 
-<span class="pc bpc" id="L325" title="3 of 4 branches missed.">        if (pointOnAABB.z == min.z &amp;&amp; testZ) {</span>
-<span class="nc" id="L326">            AdHocAABB.addVisitedBranchNormalForPlane(0);</span>
-<span class="nc" id="L327">            normals.add(new Vector3f(0, 0, -1));</span>
+<span class="pc bpc" id="L325" title="1 of 4 branches missed.">        if (pointOnAABB.z == min.z &amp;&amp; testZ) {</span>
+<span class="fc" id="L326">            AdHocAABB.addVisitedBranchNormalForPlane(0);</span>
+<span class="fc" id="L327">            normals.add(new Vector3f(0, 0, -1));</span>
         }
-<span class="pc bpc" id="L329" title="3 of 4 branches missed.">        if (pointOnAABB.z == max.z &amp;&amp; testZ) {</span>
-<span class="nc" id="L330">            AdHocAABB.addVisitedBranchNormalForPlane(1);</span>
-<span class="nc" id="L331">            normals.add(new Vector3f(0, 0, 1));</span>
+<span class="pc bpc" id="L329" title="1 of 4 branches missed.">        if (pointOnAABB.z == max.z &amp;&amp; testZ) {</span>
+<span class="fc" id="L330">            AdHocAABB.addVisitedBranchNormalForPlane(1);</span>
+<span class="fc" id="L331">            normals.add(new Vector3f(0, 0, 1));</span>
         }
 <span class="pc bpc" id="L333" title="2 of 4 branches missed.">        if (pointOnAABB.x == min.x &amp;&amp; testX) {</span>
 <span class="fc" id="L334">            AdHocAABB.addVisitedBranchNormalForPlane(2);</span>
@@ -382,13 +382,13 @@ public final class AABB {
 <span class="fc" id="L382">            AdHocAABB.addVisitedBranchCenterPoint(1);</span>
 <span class="fc" id="L383">            return new Vector3f(min.x, getCenter().y, getCenter().z);</span>
         }
-<span class="pc bpc" id="L385" title="1 of 2 branches missed.">        if (normalIsPositiveZ(normal)) {</span>
-<span class="nc" id="L386">            AdHocAABB.addVisitedBranchCenterPoint(2);</span>
-<span class="nc" id="L387">            return new Vector3f(getCenter().x, getCenter().y, max.z);</span>
+<span class="fc bfc" id="L385" title="All 2 branches covered.">        if (normalIsPositiveZ(normal)) {</span>
+<span class="fc" id="L386">            AdHocAABB.addVisitedBranchCenterPoint(2);</span>
+<span class="fc" id="L387">            return new Vector3f(getCenter().x, getCenter().y, max.z);</span>
         }
-<span class="pc bpc" id="L389" title="1 of 2 branches missed.">        if (normalIsNegativeZ(normal)) {</span>
-<span class="nc" id="L390">            AdHocAABB.addVisitedBranchCenterPoint(3);</span>
-<span class="nc" id="L391">            return new Vector3f(getCenter().x, getCenter().y, min.z);</span>
+<span class="fc bfc" id="L389" title="All 2 branches covered.">        if (normalIsNegativeZ(normal)) {</span>
+<span class="fc" id="L390">            AdHocAABB.addVisitedBranchCenterPoint(3);</span>
+<span class="fc" id="L391">            return new Vector3f(getCenter().x, getCenter().y, min.z);</span>
         }
 <span class="fc bfc" id="L393" title="All 2 branches covered.">        if (normalIsPositiveY(normal)) {</span>
 <span class="fc" id="L394">            AdHocAABB.addVisitedBranchCenterPoint(4);</span>
@@ -429,7 +429,7 @@ public final class AABB {
      * @return true, if normal is a positive z-axis unit-vector
      */
     private boolean normalIsPositiveZ(Vector3f normal) {
-<span class="pc bpc" id="L432" title="3 of 6 branches missed.">        return normal.x == 0 &amp;&amp; normal.y == 0 &amp;&amp; normal.z == 1;</span>
+<span class="fc bfc" id="L432" title="All 6 branches covered.">        return normal.x == 0 &amp;&amp; normal.y == 0 &amp;&amp; normal.z == 1;</span>
     }
 
     /**
@@ -439,7 +439,7 @@ public final class AABB {
      * @return true, if normal is a negative z-axis unit-vector
      */
     private boolean normalIsNegativeZ(Vector3f normal) {
-<span class="pc bpc" id="L442" title="3 of 6 branches missed.">        return normal.x == 0 &amp;&amp; normal.y == 0 &amp;&amp; normal.z == -1;</span>
+<span class="pc bpc" id="L442" title="1 of 6 branches missed.">        return normal.x == 0 &amp;&amp; normal.y == 0 &amp;&amp; normal.z == -1;</span>
     }
 
     /**
