--- a/new_coverage_report/org.terasology.utilities.procedural/BranchCoverageSimplesNoiseNoiseMethod.java.html
+++ b/new_coverage_report/org.terasology.utilities.procedural/BranchCoverageSimplesNoiseNoiseMethod.java.html
@@ -20,20 +20,27 @@ package org.terasology.utilities.procedural;
     // total 22 branches
 <span class="fc" id="L21">    public static final boolean branchCovered[] = new boolean[22];</span>
 
+    /**
+     * Method for calculating branch coverage percentage
+     * @return branch coverage percentage
+     */
     public static double calcBranchCoveragePercentage() {
-<span class="fc" id="L24">        double counter = 0;</span>
-<span class="fc bfc" id="L25" title="All 2 branches covered.">        for(boolean b : branchCovered){</span>
-<span class="fc bfc" id="L26" title="All 2 branches covered.">            if (b) counter++;</span>
+<span class="fc" id="L28">        double counter = 0;</span>
+<span class="fc bfc" id="L29" title="All 2 branches covered.">        for(boolean b : branchCovered){</span>
+<span class="fc bfc" id="L30" title="All 2 branches covered.">            if (b) counter++;</span>
         }
 
-<span class="fc" id="L29">        return counter / branchCovered.length * 100.0d;</span>
+<span class="fc" id="L33">        return counter / branchCovered.length * 100.0d;</span>
     }
-	
+
+    /**
+     * Method for printing branch coverage percentage.
+     */
     public static void printBranchCoveragePercentage() {
-<span class="fc bfc" id="L33" title="All 2 branches covered.">        for (int i = 0; i &lt; branchCovered.length; i++){</span>
-<span class="fc" id="L34">            System.out.println(&quot;noise(): branch &quot; + i + &quot;: &quot; + branchCovered[i]);</span>
+<span class="fc bfc" id="L40" title="All 2 branches covered.">        for (int i = 0; i &lt; branchCovered.length; i++){</span>
+<span class="fc" id="L41">            System.out.println(&quot;noise(): branch &quot; + i + &quot;: &quot; + branchCovered[i]);</span>
         }
-<span class="fc" id="L36">        System.out.println(&quot;Branch coverage of SimplexNoise.noise(x1,x2,x3,x4): &quot; + calcBranchCoveragePercentage() + &quot; %&quot;);</span>
-<span class="fc" id="L37">    }</span>
+<span class="fc" id="L43">        System.out.println(&quot;Branch coverage of SimplexNoise.noise(x1,x2,x3,x4): &quot; + calcBranchCoveragePercentage() + &quot; %&quot;);</span>
+<span class="fc" id="L44">    }</span>
 }
 </pre><div class="footer"><span class="right">Created with <a href="http://www.jacoco.org/jacoco">JaCoCo</a> 0.8.2.201808211720</span></div></body></html>
