--- a/new_coverage_report/org.terasology.utilities.procedural/SimplexNoiseTest.java.html
+++ b/new_coverage_report/org.terasology.utilities.procedural/SimplexNoiseTest.java.html
@@ -164,50 +164,71 @@ import java.lang.Math;
 <span class="fc" id="L164">    }</span>
 
 
+    /**
+     * Tests that the result of calling noise 4D is in
+     * interval [-1,1] when all four parameters are zeros.
+     */
     @Test
     void testNoiseFourParametersAllZeros() {
-<span class="fc" id="L169">        SimplexNoise sn = new SimplexNoise(7);</span>
-<span class="fc" id="L170">        float result = sn.noise(0.0f, 0.0f, 0.0f, 0.0f);</span>
-<span class="pc bpc" id="L171" title="2 of 4 branches missed.">        assertTrue(result &gt;= -1.0f &amp;&amp; result &lt;= 1.0f);</span>
-<span class="fc" id="L172">        assertEquals(0.0f, result);</span>
-<span class="fc" id="L173">    }</span>
+<span class="fc" id="L173">        SimplexNoise sn = new SimplexNoise(7);</span>
+<span class="fc" id="L174">        float result = sn.noise(0.0f, 0.0f, 0.0f, 0.0f);</span>
+<span class="pc bpc" id="L175" title="2 of 4 branches missed.">        assertTrue(result &gt;= -1.0f &amp;&amp; result &lt;= 1.0f);</span>
+<span class="fc" id="L176">        assertEquals(0.0f, result);</span>
+<span class="fc" id="L177">    }</span>
 
+    /**
+     * Tests that the result of calling noise 4D is in
+     * interval [-1,1] when all four parameters non-zero parameters.
+     */
     @Test
     void testNoiseFourParametersOne() {
-<span class="fc" id="L177">        SimplexNoise sn = new SimplexNoise(7);</span>
-<span class="fc" id="L178">        float n1 = (float) -9.8451392e8;</span>
-<span class="fc" id="L179">        float n2 = (float) -1.82247667e9;</span>
-<span class="fc" id="L180">        float n3 = (float) -9.8426086e8;</span>
-<span class="fc" id="L181">        float n4 = (float) 2.08989875e9;</span>
-<span class="fc" id="L182">        float result = sn.noise(n1, n2, n3, n4);</span>
-<span class="pc bpc" id="L183" title="2 of 4 branches missed.">        assertTrue(result &gt;= -1.0f &amp;&amp; result &lt;= 1.0f);</span>
-<span class="fc" id="L184">    }</span>
+<span class="fc" id="L185">        SimplexNoise sn = new SimplexNoise(7);</span>
+<span class="fc" id="L186">        float n1 = (float) -9.8451392e8;</span>
+<span class="fc" id="L187">        float n2 = (float) -1.82247667e9;</span>
+<span class="fc" id="L188">        float n3 = (float) -9.8426086e8;</span>
+<span class="fc" id="L189">        float n4 = (float) 2.08989875e9;</span>
+<span class="fc" id="L190">        float result = sn.noise(n1, n2, n3, n4);</span>
+<span class="pc bpc" id="L191" title="2 of 4 branches missed.">        assertTrue(result &gt;= -1.0f &amp;&amp; result &lt;= 1.0f);</span>
+<span class="fc" id="L192">    }</span>
 
+
+    /**
+     * Tests that the result of calling noise 4D is in
+     * interval [-1,1] when all four parameters non-zero parameters.
+     */
     @Test
     void testNoiseFourParametersTwo() {
-<span class="fc" id="L188">        SimplexNoise sn = new SimplexNoise(7);</span>
-<span class="fc" id="L189">        float n1 = (float) 1.74955968e9;</span>
-<span class="fc" id="L190">        float n2 = (float) 6.9046541e8;</span>
-<span class="fc" id="L191">        float n3 = (float) 2.09334016e9;</span>
-<span class="fc" id="L192">        float n4 = (float) 2.06225968e8;</span>
-<span class="fc" id="L193">        float result = sn.noise(n1, n2, n3, n4);</span>
-<span class="pc bpc" id="L194" title="2 of 4 branches missed.">        assertTrue(result &gt;= -1.0f &amp;&amp; result &lt;= 1.0f);</span>
-<span class="fc" id="L195">    }</span>
+<span class="fc" id="L201">        SimplexNoise sn = new SimplexNoise(7);</span>
+<span class="fc" id="L202">        float n1 = (float) 1.74955968e9;</span>
+<span class="fc" id="L203">        float n2 = (float) 6.9046541e8;</span>
+<span class="fc" id="L204">        float n3 = (float) 2.09334016e9;</span>
+<span class="fc" id="L205">        float n4 = (float) 2.06225968e8;</span>
+<span class="fc" id="L206">        float result = sn.noise(n1, n2, n3, n4);</span>
+<span class="pc bpc" id="L207" title="2 of 4 branches missed.">        assertTrue(result &gt;= -1.0f &amp;&amp; result &lt;= 1.0f);</span>
+<span class="fc" id="L208">    }</span>
 
+    /**
+     * Tests that the result of calling noise 4D is in
+     * interval [-1,1] when all four parameters non-zero parameters.
+     */
     @Test
     void testNoiseFourParametersThree() {
-<span class="fc" id="L199">        SimplexNoise sn = new SimplexNoise(7);</span>
-<span class="fc" id="L200">        float n1 = (float) 4.32744384E8;</span>
-<span class="fc" id="L201">        float n2 = (float) 1.66149146E9;</span>
-<span class="fc" id="L202">        float n3 = (float) -6.9053453E8;</span>
-<span class="fc" id="L203">        float n4 = (float) -1.99001549E9;</span>
-<span class="fc" id="L204">        float result = sn.noise(n1, n2, n3, n4);</span>
-<span class="pc bpc" id="L205" title="2 of 4 branches missed.">        assertTrue(result &gt;= -1.0f &amp;&amp; result &lt;= 1.0f);</span>
-<span class="fc" id="L206">    }</span>
+<span class="fc" id="L216">        SimplexNoise sn = new SimplexNoise(7);</span>
+<span class="fc" id="L217">        float n1 = (float) 4.32744384E8;</span>
+<span class="fc" id="L218">        float n2 = (float) 1.66149146E9;</span>
+<span class="fc" id="L219">        float n3 = (float) -6.9053453E8;</span>
+<span class="fc" id="L220">        float n4 = (float) -1.99001549E9;</span>
+<span class="fc" id="L221">        float result = sn.noise(n1, n2, n3, n4);</span>
+<span class="pc bpc" id="L222" title="2 of 4 branches missed.">        assertTrue(result &gt;= -1.0f &amp;&amp; result &lt;= 1.0f);</span>
+<span class="fc" id="L223">    }</span>
 
+
+    /**
+     * Method using for printing results of ad-hoc coverage tool.
+     */
     @AfterAll
     static void printCoverage() {
-<span class="fc" id="L210">        BranchCoverageSimplesNoiseNoiseMethod.printBranchCoveragePercentage();</span>
-<span class="fc" id="L211">    }</span>
+<span class="fc" id="L231">        BranchCoverageSimplesNoiseNoiseMethod.printBranchCoveragePercentage();</span>
+<span class="fc" id="L232">    }</span>
 }
 </pre><div class="footer"><span class="right">Created with <a href="http://www.jacoco.org/jacoco">JaCoCo</a> 0.8.2.201808211720</span></div></body></html>
