--- a/new_coverage_report/org.terasology.math/AABBTest.java.html
+++ b/new_coverage_report/org.terasology.math/AABBTest.java.html
@@ -137,6 +137,46 @@ import static org.junit.jupiter.api.Assertions.*;
 <span class="fc" id="L137">        assertEquals(results, wanted);</span>
 <span class="fc" id="L138">    }</span>
 
+    /**
+     * The test testNormalForPlaneClosestToOriginWithSameZ, test if the function normalForPlaneClosestToOrigin returns the normal (0,0,-1) if
+     * the input is the point (0,0,1), min = (0,0,1) and max = (0,0,1) (enters the first two branches because z-coordinates is the same for all vectors).
+     * &lt;p&gt;
+     * Test case 1:
+     * Expected_output: A vector with coordinates (0,0,-1)
+     */
+    @Test
+    void testNormalForPlaneClosestToOriginWithSameZ() {
+<span class="fc" id="L149">        Vector3f pointOnAABB = new Vector3f(0, 0, 1);</span>
+<span class="fc" id="L150">        Vector3f max = new Vector3f(0, 0, 1);</span>
+<span class="fc" id="L151">        Vector3f min = new Vector3f(0, 0, 1);</span>
+<span class="fc" id="L152">        Vector3f origin = new Vector3f(0, 0, 0);</span>
+<span class="fc" id="L153">        Vector3f wanted = new Vector3f(0, 0, -1);</span>
 
+<span class="fc" id="L155">        AABB aabb = AABB.createMinMax(min, max);</span>
+
+<span class="fc" id="L157">        Vector3f results = aabb.normalForPlaneClosestToOrigin(pointOnAABB, origin, true, true, true);</span>
+<span class="fc" id="L158">        assertEquals(results, wanted);</span>
+<span class="fc" id="L159">    }</span>
+
+    /**
+     * the test testCenterPointForNormalPositiveZ, test if the function centerPointForNormal returns the vector 0,0,1 if
+     * the normal is (0,0,1), min (0,0,1) and max (0,0,1)
+     * &lt;p&gt;
+     * Test case 1:
+     * Expected_output: A vector with coordinates (0,0,1)
+     */
+    @Test
+    void testCenterPointForNormalPositivZ() {
+<span class="fc" id="L170">        Vector3f normal = new Vector3f(0, 0, 1);</span>
+<span class="fc" id="L171">        Vector3f max = new Vector3f(0, 0, 1);</span>
+<span class="fc" id="L172">        Vector3f min = new Vector3f(0, 0, 1);</span>
+<span class="fc" id="L173">        Vector3f answer = new Vector3f(0, 0, 1);</span>
+
+<span class="fc" id="L175">        AABB aabb = AABB.createMinMax(min, max);</span>
+
+<span class="fc" id="L177">        Vector3f result = aabb.centerPointForNormal(normal);</span>
+
+<span class="fc" id="L179">        assertEquals(result, answer);</span>
+<span class="fc" id="L180">    }</span>
 }
 </pre><div class="footer"><span class="right">Created with <a href="http://www.jacoco.org/jacoco">JaCoCo</a> 0.8.2.201808211720</span></div></body></html>
