--- a/new_coverage_report/org.terasology.rendering.assets.texture/ColorTextureProducer.java.html
+++ b/new_coverage_report/org.terasology.rendering.assets.texture/ColorTextureProducer.java.html
@@ -61,14 +61,14 @@ import java.util.Set;
 
     @Override
     public Optional&lt;TextureData&gt; getAssetData(ResourceUrn urn) throws IOException {
-<span class="pc bpc" id="L64" title="2 of 4 branches missed.">        if (TerasologyConstants.ENGINE_MODULE.equals(urn.getModuleName()) &amp;&amp; TextureUtil.COLOR_RESOURCE_NAME.equals(urn.getResourceName())) {</span>
+<span class="pc bpc" id="L64" title="1 of 4 branches missed.">        if (TerasologyConstants.ENGINE_MODULE.equals(urn.getModuleName()) &amp;&amp; TextureUtil.COLOR_RESOURCE_NAME.equals(urn.getResourceName())) {</span>
 <span class="fc" id="L65">            Name fragmentName = urn.getFragmentName();</span>
 <span class="pc bpc" id="L66" title="1 of 2 branches missed.">            if (!fragmentName.isEmpty()) {</span>
 <span class="fc" id="L67">                Color color = TextureUtil.getColorForColorName(fragmentName.toLowerCase());</span>
 <span class="fc" id="L68">                return Optional.of(TextureDataFactory.newInstance(color));</span>
             }
         }
-<span class="nc" id="L71">        return Optional.empty();</span>
+<span class="fc" id="L71">        return Optional.empty();</span>
     }
 }
 </pre><div class="footer"><span class="right">Created with <a href="http://www.jacoco.org/jacoco">JaCoCo</a> 0.8.2.201808211720</span></div></body></html>
