--- a/new_coverage_report/org.terasology.rendering.assets.texture/NoiseTextureProducer.java.html
+++ b/new_coverage_report/org.terasology.rendering.assets.texture/NoiseTextureProducer.java.html
@@ -58,7 +58,7 @@ import java.util.Set;
 
     @Override
     public Optional&lt;TextureData&gt; getAssetData(ResourceUrn urn) throws IOException {
-<span class="pc bpc" id="L61" title="1 of 4 branches missed.">        if (TerasologyConstants.ENGINE_MODULE.equals(urn.getModuleName()) &amp;&amp; TextureUtil.NOISE_RESOURCE_NAME.equals(urn.getResourceName())) {</span>
+<span class="pc bpc" id="L61" title="2 of 4 branches missed.">        if (TerasologyConstants.ENGINE_MODULE.equals(urn.getModuleName()) &amp;&amp; TextureUtil.NOISE_RESOURCE_NAME.equals(urn.getResourceName())) {</span>
 <span class="fc" id="L62">            Name fragmentName = urn.getFragmentName();</span>
 <span class="pc bpc" id="L63" title="1 of 2 branches missed.">            if (!fragmentName.isEmpty()) {</span>
 <span class="fc" id="L64">                String[] parts = fragmentName.toLowerCase().split(&quot;\\.&quot;);</span>
@@ -76,7 +76,7 @@ import java.util.Set;
                 }
             }
         }
-<span class="fc" id="L79">        return Optional.empty();</span>
+<span class="nc" id="L79">        return Optional.empty();</span>
     }
 }
 </pre><div class="footer"><span class="right">Created with <a href="http://www.jacoco.org/jacoco">JaCoCo</a> 0.8.2.201808211720</span></div></body></html>
